[gd_scene load_steps=3 format=3 uid="uid://5pqb7xf70p7k"]

[ext_resource type="Script" uid="uid://bf8wipfg1jl6a" path="res://GLOBAL/menu things/file_dialog.gd" id="1_0xwkg"]
[ext_resource type="Script" uid="uid://bs4m3plcr416k" path="res://GLOBAL/scripts/NestedSearchable/nested_searchable.gd" id="1_6to4f"]

[node name="HBoxContainer" type="HBoxContainer"]
offset_top = 8.0
offset_right = 49.0
offset_bottom = 32.0
script = ExtResource("1_6to4f")

[node name="Label" type="Label" parent="."]
layout_mode = 2

[node name="FileDialog" type="FileDialog" parent="."]
title = "Open a File"
file_mode = 0
access = 2
show_hidden_files = true
use_native_dialog = true
script = ExtResource("1_0xwkg")

[node name="Button" type="Button" parent="."]
layout_mode = 2

[node name="ButtonClear" type="Button" parent="."]
layout_mode = 2
text = "Clear"

[connection signal="file_selected" from="FileDialog" to="FileDialog" method="_on_file_selected"]
[connection signal="files_selected" from="FileDialog" to="FileDialog" method="_on_files_selected"]
[connection signal="pressed" from="Button" to="FileDialog" method="_on_button_pressed"]
[connection signal="pressed" from="ButtonClear" to="FileDialog" method="_on_button_clear_pressed"]
